[package]
name = 'pallet-authority-discovery'
version = '4.0.0-dev'
authors = ['Parity Technologies <admin@parity.io>']
edition = '2021'
license = 'Apache-2.0'
homepage = 'https://substrate.io'
repository = 'https://github.com/paritytech/substrate/'
description = 'FRAME pallet for authority discovery'
readme = 'README.md'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { default-features = false, features = [
	'derive',
], package = 'parity-scale-codec', version = '3.0.0' }
frame-support = { default-features = false, path = '../support', version = '4.0.0-dev' }
frame-system = { default-features = false, path = '../system', version = '4.0.0-dev' }
pallet-session = { default-features = false, features = [
	'historical',
], path = '../session', version = '4.0.0-dev' }
scale-info = { default-features = false, features = ['derive'], version = '2.0.1' }
sp-application-crypto = { default-features = false, path = '../../primitives/application-crypto', version = '6.0.0' }
sp-authority-discovery = { default-features = false, path = '../../primitives/authority-discovery', version = '4.0.0-dev' }
sp-runtime = { default-features = false, path = '../../primitives/runtime', version = '6.0.0' }
sp-std = { default-features = false, path = '../../primitives/std', version = '4.0.0' }

[dev-dependencies]
sp-core = { path = '../../primitives/core', version = '6.0.0' }
sp-io = { path = '../../primitives/io', version = '6.0.0' }

[features]
default = ['std']
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'pallet-session/std',
	'scale-info/std',
	'sp-application-crypto/std',
	'sp-authority-discovery/std',
	'sp-runtime/std',
	'sp-std/std',
]
try-runtime = ['frame-support/try-runtime']
