[package]
name = 'pallet-authorship'
version = '4.0.0-dev'
description = 'Block and Uncle Author tracking for the FRAME'
authors = ['Parity Technologies <admin@parity.io>']
edition = '2021'
license = 'Apache-2.0'
homepage = 'https://substrate.io'
repository = 'https://github.com/paritytech/substrate/'
readme = 'README.md'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { default-features = false, features = [
	'derive',
], package = 'parity-scale-codec', version = '3.0.0' }
frame-support = { default-features = false, path = '../support', version = '4.0.0-dev' }
frame-system = { default-features = false, path = '../system', version = '4.0.0-dev' }
impl-trait-for-tuples = '0.2.2'
scale-info = { default-features = false, features = ['derive'], version = '2.0.1' }
sp-authorship = { default-features = false, path = '../../primitives/authorship', version = '4.0.0-dev' }
sp-runtime = { default-features = false, path = '../../primitives/runtime', version = '6.0.0' }
sp-std = { default-features = false, path = '../../primitives/std', version = '4.0.0' }

[dev-dependencies]
sp-core = { path = '../../primitives/core', version = '6.0.0' }
sp-io = { path = '../../primitives/io', version = '6.0.0' }

[features]
default = ['std']
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'scale-info/std',
	'sp-authorship/std',
	'sp-runtime/std',
	'sp-std/std',
]
try-runtime = ['frame-support/try-runtime']
