[package]
name = 'pallet-babe'
version = '4.0.0-dev'
authors = ['Parity Technologies <admin@parity.io>']
edition = '2021'
license = 'Apache-2.0'
homepage = 'https://substrate.io'
repository = 'https://github.com/paritytech/substrate/'
description = 'Consensus extension module for BABE consensus. Collects on-chain randomness from VRF outputs and manages epoch transitions.'
readme = 'README.md'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '3.0.0' }
frame-benchmarking = { default-features = false, optional = true, path = '../benchmarking', version = '4.0.0-dev' }
frame-support = { default-features = false, path = '../support', version = '4.0.0-dev' }
frame-system = { default-features = false, path = '../system', version = '4.0.0-dev' }
log = { default-features = false, version = '0.4.16' }
pallet-authorship = { default-features = false, path = '../authorship', version = '4.0.0-dev' }
pallet-session = { default-features = false, path = '../session', version = '4.0.0-dev' }
pallet-timestamp = { default-features = false, path = '../timestamp', version = '4.0.0-dev' }
scale-info = { default-features = false, features = ['derive'], version = '2.0.1' }
sp-application-crypto = { default-features = false, path = '../../primitives/application-crypto', version = '6.0.0' }
sp-consensus-babe = { default-features = false, path = '../../primitives/consensus/babe', version = '0.10.0-dev' }
sp-consensus-vrf = { default-features = false, path = '../../primitives/consensus/vrf', version = '0.10.0-dev' }
sp-io = { default-features = false, path = '../../primitives/io', version = '6.0.0' }
sp-runtime = { default-features = false, path = '../../primitives/runtime', version = '6.0.0' }
sp-session = { default-features = false, path = '../../primitives/session', version = '4.0.0-dev' }
sp-staking = { default-features = false, path = '../../primitives/staking', version = '4.0.0-dev' }
sp-std = { default-features = false, path = '../../primitives/std', version = '4.0.0' }

[dev-dependencies]
frame-election-provider-support = { path = '../election-provider-support', version = '4.0.0-dev' }
pallet-balances = { path = '../balances', version = '4.0.0-dev' }
pallet-offences = { path = '../offences', version = '4.0.0-dev' }
pallet-staking = { path = '../staking', version = '4.0.0-dev' }
pallet-staking-reward-curve = { path = '../staking/reward-curve', version = '4.0.0-dev' }
sp-core = { path = '../../primitives/core', version = '6.0.0' }

[features]
default = ['std']
std = [
	'codec/std',
	'frame-benchmarking/std',
	'frame-support/std',
	'frame-system/std',
	'log/std',
	'pallet-authorship/std',
	'pallet-session/std',
	'pallet-timestamp/std',
	'scale-info/std',
	'sp-application-crypto/std',
	'sp-consensus-babe/std',
	'sp-consensus-vrf/std',
	'sp-io/std',
	'sp-runtime/std',
	'sp-session/std',
	'sp-staking/std',
	'sp-std/std',
]
runtime-benchmarks = ['frame-benchmarking/runtime-benchmarks']
try-runtime = ['frame-support/try-runtime']
