[package]
name = 'pallet-bags-list'
version = '4.0.0-dev'
authors = ['Parity Technologies <admin@parity.io>']
edition = '2021'
license = 'Apache-2.0'
homepage = 'https://substrate.io'
repository = 'https://github.com/paritytech/substrate/'
description = 'FRAME pallet bags list'
readme = 'README.md'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = 'parity-scale-codec', version = '3.0.0', default-features = false, features = ['derive'] }
frame-benchmarking = { version = '4.0.0-dev', path = '../benchmarking', optional = true, default-features = false }
frame-election-provider-support = { version = '4.0.0-dev', default-features = false, path = '../election-provider-support' }
frame-support = { version = '4.0.0-dev', default-features = false, path = '../support' }
frame-system = { version = '4.0.0-dev', default-features = false, path = '../system' }
log = { version = '0.4.16', default-features = false }
pallet-balances = { version = '4.0.0-dev', path = '../balances', optional = true, default-features = false }
scale-info = { version = '2.0.1', default-features = false, features = ['derive'] }
sp-core = { version = '6.0.0', path = '../../primitives/core', optional = true, default-features = false }
sp-io = { version = '6.0.0', path = '../../primitives/io', optional = true, default-features = false }
sp-runtime = { version = '6.0.0', default-features = false, path = '../../primitives/runtime' }
sp-std = { version = '4.0.0', default-features = false, path = '../../primitives/std' }
sp-tracing = { version = '5.0.0', path = '../../primitives/tracing', optional = true, default-features = false }

[dev-dependencies]
frame-benchmarking = { version = '4.0.0-dev', path = '../benchmarking' }
frame-election-provider-support = { version = '4.0.0-dev', path = '../election-provider-support', features = ['runtime-benchmarks'] }
pallet-balances = { version = '4.0.0-dev', path = '../balances' }
sp-core = { version = '6.0.0', path = '../../primitives/core' }
sp-io = { version = '6.0.0', path = '../../primitives/io' }
sp-tracing = { version = '5.0.0', path = '../../primitives/tracing' }

[features]
default = ['std']
std = [
	'codec/std',
	'frame-election-provider-support/std',
	'frame-support/std',
	'frame-system/std',
	'log/std',
	'sp-runtime/std',
	'sp-std/std',
]
runtime-benchmarks = [
	'frame-benchmarking/runtime-benchmarks',
	'frame-election-provider-support/runtime-benchmarks',
	'pallet-balances',
	'sp-core',
	'sp-io',
	'sp-tracing',
]
fuzz = [
	'pallet-balances',
	'sp-core',
	'sp-io',
	'sp-tracing',
]
try-runtime = [ 'frame-support/try-runtime' ]
