[package]
name = 'pallet-bags-list'
version = '4.0.0-dev'
authors = ['Parity Technologies <admin@parity.io>']
edition = '2021'
license = 'Apache-2.0'
homepage = 'https://substrate.io'
repository = 'https://github.com/paritytech/substrate/'
description = 'FRAME pallet bags list'
readme = 'README.md'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '3.0.0' }
frame-benchmarking = { default-features = false, optional = true, path = '../benchmarking', version = '4.0.0-dev' }
frame-election-provider-support = { default-features = false, path = '../election-provider-support', version = '4.0.0-dev' }
frame-support = { default-features = false, path = '../support', version = '4.0.0-dev' }
frame-system = { default-features = false, path = '../system', version = '4.0.0-dev' }
log = { default-features = false, version = '0.4.16' }
pallet-balances = { default-features = false, optional = true, path = '../balances', version = '4.0.0-dev' }
scale-info = { default-features = false, features = ['derive'], version = '2.0.1' }
sp-core = { default-features = false, optional = true, path = '../../primitives/core', version = '6.0.0' }
sp-io = { default-features = false, optional = true, path = '../../primitives/io', version = '6.0.0' }
sp-runtime = { default-features = false, path = '../../primitives/runtime', version = '6.0.0' }
sp-std = { default-features = false, path = '../../primitives/std', version = '4.0.0' }
sp-tracing = { default-features = false, optional = true, path = '../../primitives/tracing', version = '5.0.0' }

[dev-dependencies]
frame-benchmarking = { path = '../benchmarking', version = '4.0.0-dev' }
frame-election-provider-support = { features = ['runtime-benchmarks'], path = '../election-provider-support', version = '4.0.0-dev' }
pallet-balances = { path = '../balances', version = '4.0.0-dev' }
sp-core = { path = '../../primitives/core', version = '6.0.0' }
sp-io = { path = '../../primitives/io', version = '6.0.0' }
sp-tracing = { path = '../../primitives/tracing', version = '5.0.0' }

[features]
default = ['std']
std = [
	'codec/std',
	'frame-election-provider-support/std',
	'frame-support/std',
	'frame-system/std',
	'log/std',
	'sp-runtime/std',
	'sp-std/std',
]
runtime-benchmarks = [
	'frame-benchmarking/runtime-benchmarks',
	'frame-election-provider-support/runtime-benchmarks',
	'pallet-balances',
	'sp-core',
	'sp-io',
	'sp-tracing',
]
fuzz = [
	'pallet-balances',
	'sp-core',
	'sp-io',
	'sp-tracing',
]
try-runtime = [ 'frame-support/try-runtime' ]
