[package]
name = 'pallet-beefy-mmr'
version = '4.0.0-dev'
authors = ['Parity Technologies <admin@parity.io>']
edition = '2021'
license = 'Apache-2.0'
description = 'BEEFY + MMR runtime utilities'
repository = 'https://github.com/paritytech/substrate'
homepage = 'https://substrate.io'

[dependencies]
beefy-merkle-tree = { default-features = false, path = './primitives', version = '4.0.0-dev' }
beefy-primitives = { default-features = false, path = '../../primitives/beefy', version = '4.0.0-dev' }
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '3.0.0' }
frame-support = { default-features = false, path = '../support', version = '4.0.0-dev' }
frame-system = { default-features = false, path = '../system', version = '4.0.0-dev' }
hex = { optional = true, version = '0.4' }
log = { default-features = false, version = '0.4.16' }
pallet-beefy = { default-features = false, path = '../beefy', version = '4.0.0-dev' }
pallet-mmr = { default-features = false, path = '../merkle-mountain-range', version = '4.0.0-dev' }
pallet-session = { default-features = false, path = '../session', version = '4.0.0-dev' }
scale-info = { default-features = false, features = ['derive'], version = '2.0.1' }
serde = { optional = true, version = '1.0.136' }
sp-core = { default-features = false, path = '../../primitives/core', version = '6.0.0' }
sp-io = { default-features = false, path = '../../primitives/io', version = '6.0.0' }
sp-runtime = { default-features = false, path = '../../primitives/runtime', version = '6.0.0' }
sp-std = { default-features = false, path = '../../primitives/std', version = '4.0.0' }

[dev-dependencies]
hex-literal = '0.3'
sp-staking = { path = '../../primitives/staking', version = '4.0.0-dev' }

[features]
default = ['std']
std = [
	'beefy-merkle-tree/std',
	'beefy-primitives/std',
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'hex',
	'log/std',
	'pallet-beefy/std',
	'pallet-mmr/std',
	'pallet-session/std',
	'serde',
	'sp-core/std',
	'sp-io/std',
	'sp-runtime/std',
	'sp-std/std',
]
