[package]
name = 'pallet-beefy'
version = '4.0.0-dev'
authors = ['Parity Technologies <admin@parity.io>']
edition = '2021'
license = 'Apache-2.0'
repository = 'https://github.com/paritytech/substrate'
description = 'BEEFY FRAME pallet'
homepage = 'https://substrate.io'

[dependencies]
beefy-primitives = { version = '4.0.0-dev', path = '../../primitives/beefy', default-features = false }
codec = { version = '3.0.0', package = 'parity-scale-codec', default-features = false, features = ['derive'] }
frame-support = { version = '4.0.0-dev', path = '../support', default-features = false }
frame-system = { version = '4.0.0-dev', path = '../system', default-features = false }
pallet-session = { version = '4.0.0-dev', path = '../session', default-features = false }
scale-info = { version = '2.0.1', default-features = false, features = ['derive'] }
serde = { version = '1.0.136', optional = true }
sp-runtime = { version = '6.0.0', path = '../../primitives/runtime', default-features = false }
sp-std = { version = '4.0.0', path = '../../primitives/std', default-features = false }

[dev-dependencies]
sp-core = { version = '6.0.0', path = '../../primitives/core' }
sp-io = { version = '6.0.0', path = '../../primitives/io' }
sp-staking = { version = '4.0.0-dev', path = '../../primitives/staking' }

[features]
default = ['std']
std = [
	'beefy-primitives/std',
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'pallet-session/std',
	'scale-info/std',
	'serde',
	'sp-runtime/std',
	'sp-std/std',
]
