[package]
name = 'pallet-beefy'
version = '4.0.0-dev'
authors = ['Parity Technologies <admin@parity.io>']
edition = '2021'
license = 'Apache-2.0'
repository = 'https://github.com/paritytech/substrate'
description = 'BEEFY FRAME pallet'
homepage = 'https://substrate.io'

[dependencies]
beefy-primitives = { default-features = false, path = '../../primitives/beefy', version = '4.0.0-dev' }
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '3.0.0' }
frame-support = { default-features = false, path = '../support', version = '4.0.0-dev' }
frame-system = { default-features = false, path = '../system', version = '4.0.0-dev' }
pallet-session = { default-features = false, path = '../session', version = '4.0.0-dev' }
scale-info = { default-features = false, features = ['derive'], version = '2.0.1' }
serde = { optional = true, version = '1.0.136' }
sp-runtime = { default-features = false, path = '../../primitives/runtime', version = '6.0.0' }
sp-std = { default-features = false, path = '../../primitives/std', version = '4.0.0' }

[dev-dependencies]
sp-core = { path = '../../primitives/core', version = '6.0.0' }
sp-io = { path = '../../primitives/io', version = '6.0.0' }
sp-staking = { path = '../../primitives/staking', version = '4.0.0-dev' }

[features]
default = ['std']
std = [
	'beefy-primitives/std',
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'pallet-session/std',
	'scale-info/std',
	'serde',
	'sp-runtime/std',
	'sp-std/std',
]
